--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,1 @@
-Unique problems are often solved with recurring solutions in software engineering. Within this paper, we will examine a research paper by Salvaneschi et al. \cite{7827078} which compares the recurring design pattern of the Observer \cite{gamma1995design} and the paradigm of reactive programming, both applied on the problem domain of reactive applications. Our review will focus on various aspects: After we evaluated how the research group used design sciences \cite{wieringa} and empirical research principles, we will challenge their research documentation with the FAIR research principles \cite{wilkinson:2016} for computer science research projects \cite{2019arXiv190805986H}. We will transfer the results by Salvaneschi et al. to the context of frontend engineering and answer a set of software engineering specific research questions thereafter. An outlook suggesting relevant topics for future research in the area of frontend engineering and reactive programming will conclude this paper.
+Unique problems are often solved with recurring solutions in software engineering. Within this paper, we will examine a research paper by Salvaneschi et al. \cite{7827078} which compares the reappearing design pattern of the Observer \cite{gamma1995design} and the paradigm of reactive programming, both applied on the problem domain of reactive applications. Our review will focus on various aspects: After we evaluated how the research group used design sciences \cite{wieringa} and empirical research principles, we will challenge their research documentation with the FAIR research principles \cite{wilkinson:2016} for computer science research projects \cite{2019arXiv190805986H}. We will transfer the results by Salvaneschi et al. to the context of frontend engineering and answer a set of software engineering specific research questions thereafter. An outlook suggesting relevant topics for future research in the area of frontend engineering and reactive programming will conclude this paper.
