--- a/index.tex
+++ b/index.tex
@@ -6,7 +6,7 @@
 
 \setminted{autogobble=true, tabsize=2, linenos=true, frame=single, breaklines=true}
 
-\newcommand{\version}{v0.3 PREPUBLISH}
+\newcommand{\version}{v1.0}
 
 
 \begin{document}
@@ -65,7 +65,7 @@ Since the paper under inspection compares RP with the Observer design pattern, t
 	\item \emph{RQ2.4: Which design alternatives exist in the context of frontend engineering?}
 \end{itemize}
 
-In the following we will first introduce and clarify important terms. Section \ref{sec:summary} then starts with a summary, Section \ref{sec:review} follows with the review of Salvaneschi et al. \cite{7827078} and answer \emph{RQ1}/\emph{RQ2.1}. The questions \emph{RQ2.2} through \emph{2.4} will be tackled in Section \ref{sec:practical-application} where we discuss earlier findings in context of frontend engineering. How Salvaneschi et al. applied statistical methods on their results are out of scope and not part of this work.
+In the following we will first introduce and clarify important terms. Section \ref{sec:summary} then starts with a summary, Section \ref{sec:review} follows with the review of Salvaneschi et al. \cite{7827078} and answer \emph{RQ1}/\emph{RQ2.1}. The questions \emph{RQ2.2} through \emph{2.4} will be tackled in Section \ref{sec:practical-application} where we discuss earlier findings in context of frontend engineering. How Salvaneschi et al. applied statistical methods on their results is out of scope and not part of our work.
 
 \subsection{Empirical Software Engineering}
 
@@ -75,7 +75,7 @@ Where the software engineering process lacks scientific and analytical formalism
 
 \subsection{Design Science}
 
-Roel J. Wieranga derives guidelines specifically for software engineering research projects from design science in his book \emph{``Design Science Methodology for Information Systems and Software Engineering''} \cite{wieringa}. As Balestra \cite{balestra:2019:designscience:articactandcontext} summarizes in his paper about design science and their application in software projects, Wieranga \cite{wieringa} defines an iterative process consisting of a \emph{design} and \emph{investigation} step. During \emph{design}, an \emph{artifact} is designed to satisfy the goals of one or more \emph{stakeholders} under consideration of a specific \emph{knowledge context}. The artifact and context is then put under \emph{investigation} to answer knowledge questions. These answers lead to a feedback loop where gained insights get fed into another design iteration. This process might be repeated until the stakeholder goals are met at a satisfying level.
+Roel J. Wieranga derives guidelines specifically for software engineering research projects from design science in his book \emph{``Design Science Methodology for Information Systems and Software Engineering''} \cite{wieringa}. As Balestra \cite{balestra:2019:designscience:articactandcontext} summarizes in his paper about design science and their application in software projects, Wieranga \cite{wieringa} defines an iterative process consisting of a \emph{design} and \emph{investigation} step. During \emph{design}, an \emph{artifact} is designed to satisfy the goals of one or more \emph{stakeholders} under consideration of a specific \emph{knowledge context}. The artifact and context is then put under \emph{investigation} to answer knowledge questions. These answers lead to a feedback loop where gained insights get fed into another design iteration. This process might be repeated until the stakeholder goals are met to a satisfying level.
 
 \subsection{FAIR Research Principles}
 \label{sec:fair}
@@ -117,7 +117,7 @@ Line 2 subscribes to key events triggered every time the user releases a key. In
 \subsection{Observer Design Pattern}
 When dividing a large component into smaller sub components, we usually want these components to be as isolated as necessary so they become more reusable, hence target for loose coupling between them. Still, the new components need a way to interact with each other.
 
-The Observer pattern \cite{gamma1995design} is deeply rooted in OOP and defines an interface where \emph{observers} can subscribe to state change notifications of a \emph{subject}. Once notified, an \emph{observer} might query the \emph{subject} for its latest state and act accordingly to its implementation. The \emph{EventTarget interface}\footnote{\url{https://dom.spec.whatwg.org/\#interface-eventtarget}}, part of the Document Object Model \emph{(DOM)} API, is an evolution of the Observer pattern. It allows i.e. JavaScript engines to interact with a browsers internal data model. This interface is used in Listing \ref{lst:eventtarget} to implement functionality presented previously once more:
+The Observer pattern \cite{gamma1995design} is deeply rooted in OOP and defines an interface where \emph{observers} can subscribe to state change notifications of a \emph{subject}. Once notified, an \emph{observer} might query the \emph{subject} for its latest state and act according to its own implementation. The \emph{EventTarget interface}\footnote{\url{https://dom.spec.whatwg.org/\#interface-eventtarget}}, part of the Document Object Model \emph{(DOM)} API, is an evolution of the Observer pattern. It allows i.e. JavaScript engines to interact with a browsers internal data model. This interface is used in Listing \ref{lst:eventtarget} to implement functionality presented previously once more:
 
 \begin{listing}[H]
 	\begin{minted}{JavaScript}
@@ -155,15 +155,15 @@ Salvaneschi et al. \cite{7827078} formulate the following four research question
 
 The first three research questions were evaluated in an experiment with a small group of 38 subjects in an earlier study \cite{Salvaneschi:2014:ESP:2635868.2635895} already. The new study at hand adds 89 new subjects contributing more statistical significance. Research question 4 targets to improve the interpretation of insights gained from the preceding questions and study.
 
-The research group structured its study in two parts: Within limited time, (i) part one asks two groups of subjects in an experiment to interpret either ten RP or ten OOP code samples and answer questions regarding the expected behavior. Code samples were formulated in Scala\footnote{\url{https://scala-lang.org/}}, using REScala\footnote{\url{http://www.rescala-lang.com/}} as RP runtime. This was followed by (ii) a survey of four quantitative and one qualitative question where subjects could give their personal opinion on comprehensibility of RP and OOP source code.
+The research group structured its study in two parts: Within limited time, part one asks two groups of subjects to interpret either ten RP or ten OOP code samples in an experiment. The subjects were expected to predict the examples behavior. All code was formulated in Scala\footnote{\url{https://scala-lang.org/}}, using REScala\footnote{\url{http://www.rescala-lang.com/}} as RP runtime. The first experiment was followed by a survey consisting of four quantitative and one qualitative question. Subjects could give their personal opinion on comprehensibility of RP and OOP source code.
 
 The comprehensibility part used code examples from three different areas as defined by Salvaneschi et al.: Four questions were \emph{synthetic applications}, code describing pure data flow and the transformation of values. The six other questions were cases for \emph{graphical animations} and \emph{interactive applications}, hence all related to GUI engineering/development. Combined with a time limit, part one contributed to answer the first three research questions.
 
-The subject population consisted exclusively of students from a software engineering course, both taught in OOP and the Observer pattern as well as RP. Before going into the actual study, the total of 127 subjects were put through a quantitative self-assessment to measure the overall programming skill level of the population. This was necessary to get the subjects acquainted with the survey tool used on one hand, on the other to collect data to answer the third research question.
+The subject population consisted exclusively of students from a software engineering course, both taught in OOP and the Observer pattern as well as RP. Before going into the actual study, the total of 127 subjects were put through a quantitative self-assessment to measure their overall programming skill level in order to answer the third research question. This also got the subject population acquainted with the survey tool as a side effect.
 
 \subsection{Results and Outlook}
 
-Salvaneschi et al. \cite{7827078} processed the gathered data using a variety of statistical tests and deduced three main findings: (i) RP increases the correctness of program comprehension; with the exception of two tasks, the RP group outperformed the OO group. Finding (ii) determines that RP style code does not require more time than comprehending its OOP equivalent. With finding (iii) the group finally claims that understanding reactive applications written with RP are overall easier to understand, regardless of the individual programming skill level of the subject.
+Salvaneschi et al. \cite{7827078} processed the gathered data using a variety of statistical tests and deduced three main findings: (i) RP increases the correctness of program comprehension; with the exception of two tasks, the RP group outperformed the OOP group. Finding (ii) determines that RP style code does not require more time than comprehending its OOP equivalent. With finding (iii) the group finally claims that reactive applications written with RP are overall easier to understand, regardless of the individuals programming skill level.
 
 Further evaluation of the survey showed a mainly positive result in favor of RP. Beside the quantitative answers given by the subjects, especially the detailed examination of the qualitative ones give an insight on the reasoning in why subjects may prefer RP over OOP or vice versa. Where subjects favoring RP speak up for overall more concise and easier composable code, subjects preferring OOP and the Observer pattern do not like the steep learning curve and the hidden layer of abstraction given by the RP runtime.
 
@@ -172,14 +172,14 @@ The research team agreed later that the hidden complexity of the RP runtime and 
 The result evaluation concludes with an outlook and three suggestions for potential follow-up research:
 
 \begin{itemize}
-	\item Multiple models to describe the process of \emph{comprehending} a circumstance are known in psychology. Salvaneschi et al. \cite{7827078} reference in \textbf{interpretation of the results} three of these models (\emph{top-down}, \emph{bottom-up} and \emph{program model}). In context, each describes how a subject might perceive either RP or OOP source code. A study focusing on the psychological aspects of code comprehension could give a new perspective on how code, RP or OOP likewise, is perceived mentally.
+	\item Multiple models to describe the process of \emph{comprehending} a circumstance are known in psychology. Salvaneschi et al. \cite{7827078} reference in \textbf{interpretation of the results} three of these models: \emph{top-down}, \emph{bottom-up} and \emph{program model}. In context, each describes how a subject might perceive either RP or OOP source code. A study focusing on the psychological aspects of code comprehension could give a new perspective on how code, RP or OOP likewise, is perceived mentally.
 	\item The \textbf{language design} (API surface area, number of combinators) plays an important role in order to make resulting code more comprehensible. The research group sees potential for further studies which investigate and compare how different languages and frameworks support or lessen the comprehensibility of RP code.
 	\item To understand how programmers work will eventually lead to improved \textbf{tool support} i.e. in IDEs. Reactive applications using RP or OOP can be visualized using a graph showing dependencies of values to each other. Hence the potential of a uniform way to interpret reactive code, no matter what paradigm it uses, might be worth of further research.
 \end{itemize}
 
 \subsection{Threats to Validity}
 
-Within the Section \emph{Threats to Validity}, Salvaneschi et al. \cite{7827078} present an overview of factors which could have pulled or pushed their results into one or another direction. They give insight in how they tried to minimize those influences, if possible. Neglecting \emph{construct} and \emph{internal validity}, the group identifies five issues related to \emph{external validity}: (i) Comparing two programming paradigms depends on an individuals programming skill level. Though a bias towards RP can be desisted, the study's result shows a favorable tendency towards RP in the end. (ii) The code examples used throughout the comprehension task try to cover the initially defined main areas of reactive applications. Hence these samples were carefully crafted to avoid giving away correct answers to easily, it is still questionable how representative for real-world applications they are. The research group members tried to minimize this threat through code reviews and iterative improvements. (iii) The experiment was conducted with student subjects solely. Though differences to more experienced developers can be considered as not significant as a cited study \cite{DiPenta} indicates. The section finally closes with the question (iv) if Scala and REScala were good choices to represent RP overall. The research group arguments that the selection was legitimate in their situation since the complete subject population was evenly exposed preparatory to them.
+Within the Section \emph{Threats to Validity}, Salvaneschi et al. \cite{7827078} present an overview of factors which could have pulled or pushed their results into one or another direction. They give insight in how they tried to minimize those influences, if possible. Neglecting \emph{construct} and \emph{internal validity}, the group identifies five issues related to \emph{external validity}: (i) Comparing two programming paradigms depends on an individuals programming skill level. Though a bias towards RP can be desisted, the study's result shows a favorable tendency towards RP in the end. (ii) The code examples used throughout the comprehension task try to cover the initially defined main areas of reactive applications. Hence these samples were carefully crafted to avoid giving away correct answers too easily, it is still questionable how representative for real-world applications they were. The research group members tried to minimize this threat through code reviews and iterative improvements. (iii) The experiment was conducted with student subjects solely. Though differences to more experienced developers can be considered as not significant as a cited study \cite{DiPenta} indicates. The section finally closes with the question (iv) if Scala and REScala were good choices to represent RP overall. The research group arguments that the selection was legitimate in their situation since the complete subject population was evenly exposed preparatory to them.
 
 \section{Review of Salvaneschi et al.}
 \label{sec:review}
@@ -192,15 +192,15 @@ The experiment was followed by another survey consisting of four quantitative an
 
 It is crucible for later revalidation of the presented results to reproduce the described study setup. The questions used in the afterwards survey are available in Section 5.2 of the report. Unfortunately neither the code examples from the experiment, the questions used in the preparation survey nor the survey software itself are provided.
 
-The paper does not give any explicit indication of the application of concepts and approaches known from design sciences. Since this is not the first study in the field of RP by Salvaneschi et al. (i.e. preceding work \cite{Salvaneschi:2014:ESP:2635868.2635895}), we could assume that such concepts were applied on a \emph{higher} planning level to iterate on previous results. We cannot proof this because of the mentioned lack of concrete evidence though.
+The paper does not give any explicit indication of the application of concepts and approaches described by design sciences. Since this is not the first study in the field of RP by Salvaneschi et al. (i.e. preceding work \cite{Salvaneschi:2014:ESP:2635868.2635895}), we could assume that such concepts were applied on a \emph{higher} planning level to iterate on previous results. We cannot proof this because of the mentioned lack of concrete evidence though.
 
-The study applied empirical research methods carefully and in a valid way overall. Hence the unavailability of mentioned complementary information makes the reproducibility at a later point hard if not impossible in case it cannot be retrieved at all.
+The study applied empirical research methods carefully and in a valid way overall. Hence the unavailability of complementary information makes the reproducibility at a later point hard if not impossible in case it cannot be retrieved at all.
 
 \subsection{Application of FAIR Research Principles}
 
 The paper has a unique DOI assigned and is, given necessary access permissions are granted, available online via the IEEE Xplore Online Library\footnote{\url{https://ieeexplore.ieee.org}}. This platform provides extensive meta information like citations, keywords or other work referencing the paper. By doing so, the research report conforms fully with criteria for \emph{Findability} and \emph{Accessibility}. We can further confirm that in regards of \emph{Interoperability} only domain-specific, accepted vocabularies and language is used. Qualified references to the work of third parties are present.
 
-This research report itself does not state an explicit license for reuse. The examination of available meta information in the IEEE Xplore Online Library reveals that the IEEE organization holds full copyrights on the report eventually. Reuse permission can be requested. As already highlighted in the previous Section, complementary objects like the experiments code samples or the complete survey questionnaires are not available. Though the report does fundamentally conform with the concepts of \emph{Reusability} by providing rich meta information, preceding points violate the concept of FAIR research.
+The research report by Salvaneschi et al. does not state an explicit license for reuse. The examination of available meta information in the IEEE Xplore Online Library reveals that the IEEE organization holds full copyrights on the report eventually. Reuse permission can be requested. As already highlighted in the previous subsection, complementary objects like the experiments code samples or the complete survey questionnaires are unavailable. Though the report does fundamentally conform with the concepts of \emph{Reusability} by providing rich meta information, preceding points violate the concept of FAIR research.
 
 To further align the results at hand with FAIR research principles, we suggest to (i) state license information more apparently and (ii) provide (at least) the code samples and questionnaires from the preliminary survey along with the report. If the software used throughout the experiment and surveys would be available too, the value for the science community could be further improved.
 
@@ -208,16 +208,16 @@ To further align the results at hand with FAIR research principles, we suggest t
 
 Before the terms of RP and OOP are introduced, Salvaneschi et al. \cite{7827078} define the \emph{reactive application}. This type of application distinguishes itself from a more traditional one-off input-to-output processing by producing a continuous, through interaction ever-changing, flow if information. By their very nature, reactive applications require design patterns to model this steady flow of data in a comprehensible way.
 
-\textbf{Reactive Programming} is thoroughly introduced by mentioning its roots in the Haskell programming language and the traction it gained throughout recent years. The research group hypothesises about readability of reactive code facilitating RP. Further characteristics like the declarative way of describing data flows or baked-in composability inherited from its FP ancestor are noted later in Section 2. The group gives then an overview of how \emph{REScala} implements an API to work with its RP runtime using \mintinline{Scala}{Var}s, \mintinline{Scala}{Signal}s and various combinations of these.
+\textbf{Reactive Programming} is thoroughly introduced by mentioning its roots in the Haskell programming language and the traction it gained throughout recent years. The research group hypothesises about readability of reactive code facilitating RP. Further characteristics like the declarative way of describing data flows or baked-in composability inherited from its FP ancestor are noted. The group gives then an overview of how \emph{REScala} implements an API to work with its RP runtime using \mintinline{Scala}{Var}s, \mintinline{Scala}{Signal}s and various combinations of these.
 
 The paradigm of \textbf{Object Oriented Programming} is less prominently introduced compared to its competitor. For its usage in reactive applications, it is quickly reduced to the Observer design pattern. Though the group highlights the decoupling of the observable and its observers as positive, inversion of control and incontrollable side effects in the observers code is noted as negative drawbacks lessen the readability and predictability of resulting source code. Since Scala does not only allow FP-flavored code, OOP code examples are presented in Scala too. We were not able to determine the specific implementation of the Observer pattern used and therefore conclude that the code examples facilitate a theoretical implementation of the design pattern.
 
-Even though Salvaneschi et al. assume in their paper the Observer design pattern as common knowledge in their expert audience, we would have appreciated an introduction on the same level as RP received. The group further reduces the OOP paradigm to one sole case which is disputable. A more differentiated approach where i.e. the patterns root in OOP is noted, but then not used throughout the report as synonym for the pattern itself would have been received well.
+Even though Salvaneschi et al. assume in their paper the Observer design pattern as common knowledge in their expert audience, we would have appreciated an introduction on the same level as RP received. The group further reduces the OOP paradigm to one sole case which is disputable. A more differentiated approach where i.e. the patterns root in OOP is noted, but then not used throughout the report as synonym for the pattern itself would have been well received.
 
 \section{Application in Frontend Engineering}
 \label{sec:practical-application}
 
-The previously reviewed paper by Salvaneschi et al. explores how RP changes the comprehensibility of code for synthetic and interactive applications as well as for graphical animations \cite{7827078}. Hence all of these problems can ultimately be implemented with RP and the Observer pattern likewise, there is no measure given when the alluded tradeoffs like the additional layer of abstraction (RP) or inversion of control (Observer) outweigh gained benefits. In order to answer research question \emph{RQ2.2 ``When should RP be considered, and when not?''}, we will present two technical scenarios in context of frontend engineering for synthetic and interactive applications in the following. The current draft of the Web Animations API\footnote{\url{https://drafts.csswg.org/web-animations/}} by the World Wide Web Consortium \emph{(W3C)} or various other libraries (i.e. \emph{react-spring}\footnote{\url{https://www.react-spring.io/}}) provide interfaces based on RP principles enabling sophisticated animation behaviors. Since high-performance graphical animations in frontend engineering are most commonly done using CSS Animations\footnote{\url{https://drafts.csswg.org/css-animations-1/}} up to today though, we will not compare the Observer pattern and RP in regards of graphical animations any further.
+The reviewed paper by Salvaneschi et al. explores how RP changes the comprehensibility of code for synthetic and interactive applications as well as for graphical animations \cite{7827078}. Hence all of these problems can ultimately be implemented with RP and the Observer pattern likewise, there is no measure given when the alluded tradeoffs like the additional layer of abstraction (RP) or inversion of control (Observer) outweigh gained benefits. In order to answer research question \emph{RQ2.2 ``When should RP be considered, and when not?''}, we will present two technical scenarios in context of frontend engineering for synthetic and interactive applications in the following. The current draft of the Web Animations API\footnote{\url{https://drafts.csswg.org/web-animations/}} by the World Wide Web Consortium \emph{(W3C)} or various other libraries (i.e. \emph{react-spring}\footnote{\url{https://www.react-spring.io/}}) provide interfaces based on RP principles enabling sophisticated animation behaviors. Since high-performance graphical animations in frontend engineering are most commonly done using CSS Animations\footnote{\url{https://drafts.csswg.org/css-animations-1/}} up to today though, we will not compare the Observer pattern and RP in regards of graphical animations any further.
 
 \subsection{Modelling Data Flow}
 
@@ -242,7 +242,7 @@ We can implement a solution facilitating a basic RP approach using the \mintinli
 	\label{lst:data-flow-rp}
 \end{listing}
 
-The execution of \mintinline{JavaScript}{fetchProfile} on line 1 returns a \mintinline{JavaScript}{Promise} providing basic user profile information. The profile serves as input parameter for \mintinline{JavaScript}{fetchAvatar} which returns another \mintinline{JavaScript}{Promise} (line 3). Once this \mintinline{JavaScript}{Promise} resolves with the avatar picture information, all fetched data is combined and returned (line 4). This data is then finally piped to the \mintinline{JavaScript}{renderUser} function on line 6, which eventually shows the users complete profile information in the user interface.
+The execution of \mintinline{JavaScript}{fetchProfile} on line 1 returns a \mintinline{JavaScript}{Promise} providing basic user profile information. The profile serves as input parameter for \mintinline{JavaScript}{fetchAvatar} which returns another \mintinline{JavaScript}{Promise} (line 3). Once this \mintinline{JavaScript}{Promise} resolves with the avatar picture information, all fetched data is combined and returned (line 4). This data is then piped to the \mintinline{JavaScript}{renderUser} function on line 6, which eventually shows the users complete profile information in the user interface.
 
 Listing \ref{lst:data-flow-observer} leverages a custom implementation of the Observer design pattern after Gamma et al. \cite{gamma1995design}, providing the same level of functionality as Listing \ref{lst:data-flow-rp} did using RP.
 
@@ -285,7 +285,7 @@ The \emph{interactive application} \cite{7827078} described in the second scenar
 	\noindent\emph{S2 Handle User Interaction:} Handle clicks on a button available through \mintinline{JavaScript}{getButton}. Every time a user clicks the button, log the current time using \mintinline{JavaScript}{logInteraction}. The log shows a list of all user interactions eventually.
 \end{framed}
 
-Listing \ref{lst:event-handling-observer} shows a straight forward implementation for this problem in an arbitrary browser using the built-in, Observer based \mintinline{JavaScript}{EventTarget} interface.
+Listing \ref{lst:event-handling-observer} presents a straight forward implementation for this problem in an arbitrary browser using the built-in, Observer based \mintinline{JavaScript}{EventTarget} interface.
 
 \begin{listing}[ht]
 	\begin{minted}{JavaScript}
@@ -311,7 +311,7 @@ An RP based solution using \emph{BaconJS} is shown in the following Listing \ref
 
 Where we used \mintinline{JavaScript}{addEventListener} to register an observer in Listing \ref{lst:event-handling-observer}, we use \mintinline{JavaScript}{fromEvent} to hook up to click events of the button on line 1. Here, \mintinline{JavaScript}{fromEvent} creates an \mintinline{JavaScript}{EventStream}\footnote{\url{https://baconjs.github.io/api3/classes/eventstream.html}} of click events. Each of these events get transformed to a new \mintinline{JavaScript}{Date} instance using the the \mintinline{JavaScript}{map} combinator (line 2). Line 3 subscribes to these \mintinline{JavaScript}{Date} instances by passing \mintinline{JavaScript}{logInteraction} as subscriber to \mintinline{JavaScript}{onValue} which will log the users button interactions.
 
-Both the Observer and RP based implementation show a simplistic solution for S2. Though each look similar in essence, the RP approach using \emph{BaconJS} implies a lot of additional work behind the scene since it has to create and maintain the \mintinline{JavaScript}{EventStream} abstraction. Embracing the Observer design pattern without any detour, Listing \ref{lst:event-handling-observer} registers its observer using \mintinline{JavaScript}{addEventListener} straight away and implements necessary logic to call \mintinline{JavaScript}{logInteraction} in place.
+Both the Observer and RP based implementation show a simplistic solution for S2. Though each looks similar in essence, the RP approach using \emph{BaconJS} implies a lot of additional work behind the scene since it has to create and maintain the \mintinline{JavaScript}{EventStream} abstraction. Embracing the Observer design pattern without any detour, Listing \ref{lst:event-handling-observer} registers its observer using \mintinline{JavaScript}{addEventListener} straight away and implements necessary logic to call \mintinline{JavaScript}{logInteraction} in place.
 
 
 \subsection{When RP? When Observer?}
@@ -319,11 +319,11 @@ Both the Observer and RP based implementation show a simplistic solution for S2.
 
 With S1 and S2 we presented two examples how RP and the Observer design pattern can lead to solutions for the same problem. S1 confirms the most important findings regarding benefits of RP by Salvaneschi et al. \cite{7827078}: Boilerplate code is reduced significantly and the declarative way of describing data flows improves on the comprehensibility of the source code. We can affirm this further by our own experience during the construction of the examples: Refactoring the Observer based code was more prone to runtime errors because of its fragmented nature.
 
-S2 contrasts with S1 strongly by intention. The problem is more simplistic on one hand, on the other it might look unfair to apply RP on an API already leveraging the Observer pattern like \mintinline{JavaScript}{EventTarget} does. Indeed we argue that applying RP just for the sake of it is dangerous on the long run. Introducing hidden complexity (create an \mintinline{JavaScript}{EventStream} using \mintinline{JavaScript}{fromEvent}) does not improve the source code itself nor its comprehensibility in any way. In fact it will eventually make debugging problems harder down the road.
+S2 contrasts with S1 strongly by intention. The problem is more simplistic on one hand, on the other it might look unfair to apply RP on an API already leveraging the Observer pattern like \mintinline{JavaScript}{EventTarget} does. Indeed we argue that applying RP just for the sake of it is dangerous on the long run. Introducing hidden complexity (creation of an \mintinline{JavaScript}{EventStream} using \mintinline{JavaScript}{fromEvent}) does not improve the source code itself nor its comprehensibility in any way. In fact, it will eventually make debugging problems harder down the road.
 
-So, when should RP used and when should the Observer design pattern be applied ultimately? We refuse to take position for one or the other. Hence we support that RP code is more comprehensible when it comes to the description of complex succession of data transformations over time as Salvaneschi et al. \cite{7827078} proofed in their study. In contrary we also cannot approve its blind application for every problem given. As exemplified with S2 previously, there are situations where the Observer pattern has its benefits over RP too.
+So, when should RP used and when should the Observer design pattern be applied ultimately? We refuse to take position for one or the other. We support that RP code is more comprehensible when it comes to the description of complex succession of data transformations over time as Salvaneschi et al. \cite{7827078} proofed in their study. We also cannot approve its blind application for every problem given though. As exemplified with S2 previously, there are situations where the Observer pattern has its benefits over RP, too.
 
-This absence of any solid argumentation leaves the individual engineer facing the choice between the Observer pattern and RP with a lot of room for interpretation. We attempt to improve on this situation by providing a set of criteria with Table \ref{tab:criteria}. Each criterion states one or more questions. We do not intend to give simple \emph{``if-this-then-that''} recipes. Instead, the questions sole purpose is to give a starting point for a impartial decision finding process.
+This lack of a solid argumentation leaves the individual engineer, facing the choice between the Observer pattern and RP, with a lot of room for interpretation unfortunately. We attempt to improve on this situation by providing a set of criteria with Table \ref{tab:criteria}. Each criterion states one or more questions. We do not intend to give simple \emph{``if-this-then-that''} recipes. Instead, the questions sole purpose is to give a starting point for an impartial decision finding process.
 
 \begin{table}[ht]
 	\begin{tabularx}{\textwidth}{ |l|X| }
@@ -341,11 +341,11 @@ This absence of any solid argumentation leaves the individual engineer facing th
 
 \subsection{Alternatives}
 
-The DOM API uses the Observer design pattern with the \mintinline{JavaScript}{EventTarget} interface extensively as we demonstrated repeatedly. The JavaScript \mintinline{JavaScript}{Promise} leverages RP for its API and can be used to describe asynchronous operations since the wide adoption of its specification by major browsers and JavaScript engines. We are convinced that neither the Observer pattern nor RP are easily to be replaced in the field of frontend engineering. We were further not able to identify any trends for a concrete alternative at the time of writing this paper.
+The DOM API uses the Observer design pattern with the \mintinline{JavaScript}{EventTarget} interface extensively as we demonstrated repeatedly. The JavaScript \mintinline{JavaScript}{Promise} leverages RP for its API and can be used to describe asynchronous operations since the wide adoption of its specification by major browsers and JavaScript engines. We are convinced that neither the Observer pattern nor RP are easily to be replaced in the field of frontend engineering. We were not able to identify any trends for a concrete alternative at the time of writing this paper.
 
 \subsection{Outlook}
 
-We hypothesised about when the application of RP might be worth or when better stick with a more traditional Observer pattern based approach in the previous Subsection \ref{sec:when-rp-when-observer}. A study providing empirical insight in the matter of the presented scenarios and decision criteria in Table \ref{tab:criteria} could yield valuable results to support software projects facing the question stated in \emph{RQ2.2}.
+We hypothesised about when the application of RP might be worth or when better stick with a more traditional Observer pattern based approach in the previous Subsection \ref{sec:when-rp-when-observer}. A study providing empirical insight in the matter of the presented scenarios and decision criteria in Table \ref{tab:criteria} could yield valuable results to support software projects facing the question stated in \emph{RQ2.2 ``When should RP be considered, and when not?''}.
 
 The implementation of high-performance graphical animations in frontend engineering is usually done with CSS Animations today. It allows the implementation of simple transitions in an easy way. More complex animations which need to be synchronized to the applications logic demand for more sophisticated APIs than CSS Animations can provide. JavaScript libraries like \emph{react-spring} do have such RP based APIs today, though cannot calculate animated values as efficient as the browsers own CSS engine can. The W3C has a promising draft for the Web Animations API in development. We are certain that this would be an interesting area for future research.
 
@@ -353,7 +353,7 @@ Our own experiences using RP for developing frontend applications using \emph{Rx
 
 \section{Conclusion}
 
-With this paper we revisited the study of Salvaneschi et al. \cite{7827078}. We did a review of their work in context of design sciences and empirical software engineering. Furthermore we looked into how their documentation withstands the FAIR research principles and what could be improved in regards of the amendments for computer science research projects proposed by Hasselbring et al. \cite{2019arXiv190805986H}. With Section \ref{sec:practical-application} we finally transferred the work of Salvaneschi et al. to the context of todays frontend engineering. We demonstrated how a solution for two distinct scenarios can be implemented using the Observer design pattern and RP likewise. Because we refused to give fixed recommendations when to use which paradigm or pattern, we presented a criteria catalog with questions serving as a starter for the decision finding process. Section \ref{sec:practical-application} concludes with the proposal of three topics for further research: (i) A study to validate presented scenarios and decision criteria in order to support software projects, (ii) the examination of the W3C draft for the Web Animations API allowing complex high-performance animations and finally to (iii) explore and innovate on improved debug tooling to support engineers working with RP.
+With this paper we revisited the study of Salvaneschi et al. \cite{7827078}. We did a review of their work in context of design sciences and empirical software engineering. Furthermore we looked into how their documentation withstands the FAIR research principles and what could be improved in regards of the amendments for computer science research projects proposed by Hasselbring et al. \cite{2019arXiv190805986H}. With Section \ref{sec:practical-application} we  transferred the work of Salvaneschi et al. to the context of todays frontend engineering. We demonstrated how a solution for two distinct scenarios can be implemented using the Observer design pattern and RP likewise. Because we refused to give fixed recommendations when to use which paradigm or pattern, we presented a criteria catalog with questions serving as a starter for the decision finding process. Section \ref{sec:practical-application} concludes with the proposal of three topics for further research: (i) A study to validate presented scenarios and decision criteria in order to support software projects, (ii) the examination of the W3C draft for the Web Animations API allowing complex high-performance animations and finally to (iii) explore and innovate on improved debug tooling to support engineers working with RP.
 
 After writing this paper we decided to make the third topic subject to our own future research in order to gain the masters degree.
 
