--- a/paper.tex
+++ b/paper.tex
@@ -149,7 +149,7 @@ Salvaneschi et al. \cite{7827078} formulate the following four research question
 	\item \emph{``Does reactive programming impact the correctness of program comprehension?''}
 	\item \emph{``Does reactive programming impact time for program comprehension?''}
 	\item \emph{``Does comprehending RP programs require a different programming skills level than the OO style?''}
-	\item \emph{``What are the reasons for a difference - if a any - in comprehending RP programs and OO programs?''}
+	\item \emph{``What are the reasons for a difference - if any - in comprehending RP programs and OO programs?''}
 \end{itemize}
 
 The first three research questions were evaluated in an experiment with a small group of 38 subjects in an earlier study \cite{Salvaneschi:2014:ESP:2635868.2635895} already. The new study at hand adds 89 new subjects contributing more statistical significance. Research question 4 targets to improve the interpretation of insights gained from the preceding questions and study.
