--- a/slides.tex
+++ b/slides.tex
@@ -145,7 +145,7 @@
 		\item \emph{``Does reactive programming \textbf{impact the correctness} of program comprehension?''}\bigskip
 		\item \emph{``Does reactive programming \textbf{impact time} for program comprehension?''}\bigskip
 		\item \emph{``Does comprehending RP programs \textbf{require a different programming skills level} than the OO style?''}\bigskip
-		\item \emph{``What are the \textbf{reasons for a difference} - if a any - in comprehending RP programs and OO programs?''}
+		\item \emph{``What are the \textbf{reasons for a difference} - if any - in comprehending RP programs and OO programs?''}
 	\end{itemize}
 \end{frame}
 
